force-app/main/default/objects/Convention__c/fields/Adhesion_anuelle__c.field-meta.xml
<CustomField>
    <fullName>Adhesion_anuelle__c</fullName>
    <inlineHelpText>Payée une fois par an</inlineHelpText>
    <label>Adhésion annuelle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>