force-app/main/default/objects/Convention__c/fields/Date_debut__c.field-meta.xml
<CustomField>
    <fullName>Date_debut__c</fullName>
    <label>Date de début</label>
    <required>true</required>
    <type>Date</type>
</CustomField>