force-app/main/default/objects/Convention__c/fields/Date_fin__c.field-meta.xml
<CustomField>
    <fullName>Date_fin__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>