force-app/main/default/objects/Convention__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <formula>IF(ISNULL(Date_fin__c) , false, TODAY() &gt; Date_fin__c)</formula>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>