force-app/main/default/objects/Convention__c/fields/Montant_declenchement_palier1__c.field-meta.xml
<CustomField>
    <fullName>Montant_declenchement_palier1__c</fullName>
    <label>Montant déclenchement palier 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>