force-app/main/default/objects/Convention__c/fields/Montant_fixe_remuneration__c.field-meta.xml
<CustomField>
    <fullName>Montant_fixe_remuneration__c</fullName>
    <label>Montant fixe de rémunération</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>