force-app/main/default/objects/Convention__c/fields/Participation_financiere__c.field-meta.xml
<CustomField>
    <fullName>Participation_financiere__c</fullName>
    <inlineHelpText>Payée une fois par an</inlineHelpText>
    <label>Participation financière</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>