force-app/main/default/objects/Convention__c/fields/Pourcentage_remuneration_palier1__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_remuneration_palier1__c</fullName>
    <label>% de rémunération palier 1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>