force-app/main/default/objects/Convention__c/fields/Remuneration_C1__c.field-meta.xml
<CustomField>
    <fullName>Remuneration_C1__c</fullName>
    <label>Rémunération C1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>