force-app/main/default/objects/Convention__c/fields/Remuneration_C2__c.field-meta.xml
<CustomField>
    <fullName>Remuneration_C2__c</fullName>
    <label>Rémunération C2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>