force-app/main/default/objects/Convention__c/fields/Remuneration_C3__c.field-meta.xml
<CustomField>
    <fullName>Remuneration_C3__c</fullName>
    <label>Rémunération C3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>