force-app/main/default/objects/Convention__c/fields/Remuneration_E_Mwh_Palier1__c.field-meta.xml
<CustomField>
    <fullName>Remuneration_E_Mwh_Palier1__c</fullName>
    <label>Rémunération €/Mwh palier 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>