force-app/main/default/objects/Convention__c/fields/Remuneration_E_NmbrCompteur__c.field-meta.xml
<CustomField>
    <fullName>Remuneration_E_NmbrCompteur__c</fullName>
    <label>Rémunération €/Nombre de compteur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>