force-app/main/default/objects/Convention__c/fields/Remuneration_Gaz__c.field-meta.xml
<CustomField>
    <fullName>Remuneration_Gaz__c</fullName>
    <label>Rémunération Gaz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>