force-app/main/default/objects/Convention__c/fields/Salarie__c.field-meta.xml
<CustomField>
    <fullName>Salarie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salarié</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conventions</relationshipName>
    <type>Lookup</type>
</CustomField>