force-app/main/default/objects/Convention__c/fields/TECH_RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>TECH_RecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_RecordTypeName</label>
    <type>Text</type>
</CustomField>