force-app/main/default/objects/Convention__c/fields/Type_de_remuneration__c.field-meta.xml
<CustomField>
    <fullName>Type_de_remuneration__c</fullName>
    <label>Type de rémunération</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>€/Mwh par palier</fullName>
                <default>true</default>
                <label>€/Mwh par palier</label>
            </value>
            <value>
                <fullName>€/Compteur</fullName>
            </value>
            <value>
                <fullName>Pourcentage</fullName>
            </value>
            <value>
                <fullName>€/Mwh</fullName>
                <isActive>false</isActive>
                <label>€/Mwh</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>