force-app/main/default/objects/Convention__c/fields/Volume_declenchement_palier2__c.field-meta.xml
<CustomField>
    <fullName>Volume_declenchement_palier2__c</fullName>
    <label>Volume déclenchement palier 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>