force-app/main/default/objects/Convention__c/fields/Volume_declenchement_palier3__c.field-meta.xml
<CustomField>
    <fullName>Volume_declenchement_palier3__c</fullName>
    <label>Volume déclenchement palier 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>