force-app/main/default/objects/Convention__c/recordTypes/Apporteurs_Affaires.recordType-meta.xml
<RecordType>
    <fullName>Apporteurs_Affaires</fullName>
    <active>true</active>
    <label>Apporteurs Affaires</label>
</RecordType>