force-app/main/default/objects/Convention__c/recordTypes/Partenaires.recordType-meta.xml
<RecordType>
    <fullName>Partenaires</fullName>
    <active>true</active>
    <label>Partenaires</label>
</RecordType>