force-app/main/default/objects/Convention__c/recordTypes/Prescripteurs.recordType-meta.xml
<RecordType>
    <fullName>Prescripteurs</fullName>
    <active>true</active>
    <label>Prescripteurs</label>
</RecordType>