force-app/main/default/objects/Convention__c/recordTypes/Salarie.recordType-meta.xml
<RecordType>
    <fullName>Salarie</fullName>
    <active>true</active>
    <label>Salarié</label>
</RecordType>