force-app/main/default/objects/Convention__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Montant_fixe_remuneration__c</columns>
    <columns>Pourcentage_remuneration_palier1__c</columns>
    <columns>Date_debut__c</columns>
    <columns>Date_fin__c</columns>
    <columns>Inactive__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>